# Macro-Proto

./: .embed.toml  Cargo.toml  Readme.md
examples/: motor.rs  ssd1351.rs
src/: display.rs  encoder.rs  main.rs  matrix.rs  vibrator.rs
